--- a/inedx.html
+++ b/inedx.html
@@ -82,7 +82,26 @@
             </section>
 
             <!--===== COLLECTION =====-->
-            
+            <section class="collection section">
+              <div class="collection__container bd-grid">
+                <div class="collection__card">
+                    <div class="collection__data">
+                        <h3 class="collection__name">Nike</h3>
+                        <p class="collection__description">New collection 2021</p>
+                        <a href="#" class="button-light">Buy now <box-icon name='right-arrow-alt' class='button-icon'></box-icon></a>
+                    </div>
+                    <img src="./assets/img/collection1.png" alt="" class="collection__img" />
+                </div>
+                <div class="collection__card">
+                    <div class="collection__data">
+                        <h3 class="collection__name">Addidas</h3>
+                        <p class="collection__description">New collection 2021</p>
+                        <a href="#" class="button-light">Buy now <box-icon name='right-arrow-alt' class='button-icon'></box-icon></a>
+                    </div>
+                    <img src="./assets/img/collection2.png" alt="" class="collection__img" />
+                </div>
+              </div>
+            </section>
 
             <!--===== WOMEN SNEAKERS =====-->
             
